@@ -1,6 +1,6 @@
 /*
  * Iris is a World Generator for Minecraft Bukkit Servers
- * Copyright (c) 2021 Arcane Arts (Volmit Software)
+ * Copyright (c) 2022 Arcane Arts (Volmit Software)
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -19,6 +19,7 @@
 package com.volmit.iris.util.decree.handlers;
 
 import com.volmit.iris.Iris;
+import com.volmit.iris.core.IrisSettings;
 import com.volmit.iris.core.loader.IrisData;
 import com.volmit.iris.engine.object.IrisDimension;
 import com.volmit.iris.util.collection.KList;
@@ -27,7 +28,6 @@ import com.volmit.iris.util.decree.DecreeParameterHandler;
 import com.volmit.iris.util.decree.exceptions.DecreeParsingException;
 
 import java.io.File;
-import java.util.stream.Collectors;
 
 public class DimensionHandler implements DecreeParameterHandler<IrisDimension> {
     @Override
@@ -56,12 +56,19 @@ public class DimensionHandler implements DecreeParameterHandler<IrisDimension> {
 
     @Override
     public IrisDimension parse(String in, boolean force) throws DecreeParsingException {
+
+        if (in.equalsIgnoreCase("default")) {
+            return parse(IrisSettings.get().getGenerator().getDefaultWorldType());
+        }
+
         KList<IrisDimension> options = getPossibilities(in);
+
 
         if (options.isEmpty()) {
             throw new DecreeParsingException("Unable to find Dimension \"" + in + "\"");
-        } try {
-            return options.stream().filter((i) -> toString(i).equalsIgnoreCase(in)).collect(Collectors.toList()).get(0);
+        }
+        try {
+            return options.stream().filter((i) -> toString(i).equalsIgnoreCase(in)).toList().get(0);
         } catch (Throwable e) {
             throw new DecreeParsingException("Unable to filter which Biome \"" + in + "\"");
         }
